--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@
   background-color: #f7f57f;
 }
 
+#tombol {
+  margin-top: -16px;
+  margin-left: 5px;
+}
 footer {
   background-color: #f7f57f;
 }
 
 section {
-    padding-top: 5rem;
+  padding-top: 5rem;
 }
